Fix postgis, add swagger, add swagger documentation